# PlaywrightMiniProject_01

./: .gitignore  conftest.py  index.html  pyproject.toml  readme.md
.github/workflows/: Allure.yml  Chrome.yml  Firefox.yml  main.yml  playwright_test_01.yml  smoke.yml
allure/master/: index.html
allure/master/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 1096f060b275a4f6.json  11b8648f60f49274.json  12b098329c18e9ca.json  1389c360ec29ef96.json  13d41641c30d01cf.json  18d198062d28b36b.json  1a39b3588daae3f6.json  1e43f73a90c47668.json  1e9fab829582b7f0.json  1eb69e1a3b3cc4.json  1f00810373065645.json  1f1ed4749a4d585a.json  1f4e12caca5c7ee6.json  1f7663842d8472e6.json  1fd781b31037e8a6.json  2219a657ab3806c1.json  223f6da971c239c1.json  24079c2b3969f01d.json  242cd31ab14018e0.json  25399823cfdf2881.json  259a0819e6d7c5ae.json  27976121f6e611f4.json  280bbb89c2c4b6b5.json  285b701284fdbccb.json  2a18437a515cb03.json  2e3050e788e2bb6c.json  2e8f91501d9c9e54.json  2ffcf6d66f658b64.json  3019789b4852defc.json  3021591bec45f781.json  31ab871c78acdd2a.json  327fa5d275e8ad21.json  33546ef203d0d3a2.json  338bf781896a6617.json  343d4f8881e68761.json  354d75483fb19d0e.json  3580887c6afbf0a2.json  3616b5a77a67c16b.json  363fb1617373ae76.json  37eb4cd900d1fdc.json  (+190 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
page_objects/: base.py  menu.py
tests/: test_TC#001.py  test_TC#002.py  test_TC#003.py  test_TC#004.py  test_TC#005.py
widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+85 files in other folders)
