[project]
name = "playwright-automation-python-infocourse"
version = "0.1"
description = "This is a first project for Playwright automation in Python."
authors = [
    { name="Andrei M." }
    ]
requires-python = ">=3.14.0"
readme = "README.md"

dependencies = [
    "playwright>=1.56.0",
    "pytest>=9.0.1", 
    "pytest-playwright>=0.5.0", 
    "pytest-xdist>=3.8.0",
    "pytest-dotenv>=0.5.2"
]

[tool.pytest.ini_options]
addopts = """
    --base-url https://coffee-cart.app/
    -n auto
    --headed --browser=chromium
    --slowmo=2000
    --ignore=tests/samples
    """
testpaths = [
    "tests"
]
markers = [
    "smoke: mark a test as a smoke test",
    "regression: mark a test as a regression test"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"