[tool.poetry]
name = "playwright-automation-python-infocourse"
version = "0.2"
description = "This is a first project for Playwright automation in Python."
authors = ["Andrei M."]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]  
python = ">=3.12.0"
playwright=">=1.56.0"
pytest=">=9.0.1"
pytest-playwright=">=0.5.0"
pytest-xdist=">=3.8.0"
python-dotenv=">=1.0.0"
allure-pytest=">=2.15.0"

[tool.pytest.ini_options]
addopts = """
    --base-url https://coffee-cart.app/
    -n 2
    --ignore=tests/samples
    --ignore=tests/test_TC#004.py
     --alluredir=allure-results
    """
    # --headed
    # --browser=chromium
    # --slowmo=500
     

testpaths = [
    "tests"
]
markers = [
    "smoke: mark a test as a smoke test",
    "regression: mark a test as a regression test",
    "mobile: mark a test to run on mobile viewport",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"